--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <h4>CWA<img src="assets/images/logo-icon.png" alt=""></h4>
+              <!-- <h4> CWA<img src="assets/images/logo-icon.png" alt=""></h4> -->
+               <a href="index.html" class="logo" style="display: flex; align-items: center; gap: 10px;">
+    <h4>CWA</h4>
+    <img src="assets/images/logo-icon.png" alt="Logo" style="height: 50px;">
+</a>
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
